[package]
name = "humanize-url"
description = "A library for displaying URLs in a human-friendly way"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
unrestrictive-url = { version = "0.0.0", path = "../unrestrictive-url" }

[package.metadata.workspaces]
independent = true
