[package]
name = "truncate-url"
description = "A library for truncating URLs to a maximum character length"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]

[package.metadata.workspaces]
independent = true
