[package]
name = "unrestrictive-url"
description = "A library for parsing and freely modifying URLs"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.24"
url = "2.2.1"

[package.metadata.workspaces]
independent = true
